# CAT32_CPP

./: .gitignore  CAT32.cpp  CAT32.hpp  README.md  app.cpp  meson.build
core/: compiler.cpp  constant.hpp  define.hpp  executor.cpp  fixed_point_unit.hpp  font.hpp  fpu.hpp  interpreter.cpp  interpreter.hpp  kernel.cpp  kernel.hpp  memory.cpp  memory.hpp  module.cpp  module.hpp  opcode.cpp  opcode.hpp  tokenizer.cpp  utility.cpp  utility.hpp  video.cpp  video.hpp
example/: 0.app  1.app  10.app  11.app  12.app  13.app  14.app  15.app  16.app  18.app  19.app  2.app  3.app  4.app  5.app  6.app  7.app  8.app  9.app  bouncetext.app  bracket.app  breakandcontinue.app  buttons.app  constant.app  deferfold.app  evloop.app  fruit.app  fruitless.app  functionvalidation.app  hashmodule.app  hexsprite.app  mandelbrot.app  modulo.app  packedstring.app  recursive.app  space_ignorant.app  string_reorder.app
lib/: sdl.cpp  sdl.hpp
module/: audio.cpp  audio.hpp  builtin.cpp  builtin.hpp  button.cpp  button.hpp  filesystem.cpp  filesystem.hpp  font.hpp  interpreter.cpp  interpreter.hpp  opcode.cpp  opcode.hpp  string.cpp  string.hpp  video.cpp  video.hpp
spec/: base.hpp  spec.hpp
